@@ -26,21 +26,55 @@
  */
 $lan = array(
     'plugin_title' => 'Campaigns Plugin',
-    'copy_prompt' => 'Are you sure that you want to copy the selected campaign?',
-    'delete_prompt' => 'This will delete all data for the campaign. If you have enabled click tracking then link clicks will no longer work. Are you sure?',
-    'delete_draft_prompt' => 'Are you sure that you want to delete all draft campaigns without a subject?',
-    'requeue_prompt' => 'Are you sure that you want to requeue the selected campaign?',
+    'Manage campaigns' => 'Manage campaigns',
+    /* Controller.php */
+    'tab_sent' => 'Sent',
+    'tab_draft' => 'Draft',
+    'tab_active' => 'Active',
+    'campaign was not resent to any email addresses' => 'campaign was not resent to any email addresses',
+    'email addresses must be entered' => 'email addresses must be entered',
+    'Resend campaign' => 'Resend campaign',
+    'Campaign %d requeued' => 'Campaign %d requeued',
+    'Unable to requeue campaign %d' => 'Unable to requeue campaign %d',
     'Campaign %d copied to %d' => 'Campaign %d copied to %d',
     'Unable to copy campaign %d' => 'Unable to copy campaign %d',
+    'Campaign %d deleted' => 'Campaign %d deleted',
+    'Unable to delete %d ' => 'Unable to delete %d ',
+    '%d campaigns deleted' => '%d campaigns deleted',
+    'Campaigns' => 'Campaigns',
     'ID' => 'ID',
     'From' => 'From',
     'Subject' => 'Subject',
     'Entered' => 'Entered',
     'Embargo' => 'Embargo',
+    'details' => 'details',
+    'lists' => 'lists',
+    'status' => 'status',
+    'select' => 'select',
     'Sent' => 'Sent',
-    'tab_sent' => 'Sent',
-    'tab_draft' => 'Draft',
-    'tab_active' => 'Active',
+    'resend_button' => 'Resend',
+    'requeue_button' => 'Requeue',
+    'requeue_prompt' => 'Are you sure that you want to requeue the selected campaign?',
+    'copy_button' => 'Copy',
+    'copy_prompt' => 'Are you sure that you want to copy the selected campaign?',
+    'delete_button' => 'Delete',
+    'delete_prompt' => 'This will delete all data for the campaign. If you have enabled click tracking then link clicks will no longer work. Are you sure?',
+    'delete_drafts_button' => 'Delete drafts',
+    'delete_draft_prompt' => 'Are you sure that you want to delete all draft campaigns without a subject?',
+    'edit_button' => 'Edit',
+    /* resend_panel.tpl.php */
     'Campaign' => 'Campaign',
-    'Campaigns' => 'Campaigns'
+    'campaign will be resent to these subscribers' => 'campaign will be resent to these subscribers',
+    'bounces deleted for' => 'bounces deleted for',
+    'campaign was not originally sent to these subscribers' => 'campaign was not originally sent to these subscribers',
+    'these subscribers are unknown' => 'these subscribers are unknown',
+    'these are invalid email addresses' => 'these are invalid email addresses',
+    'Campaign requeued' => 'Campaign requeued',
+    'email addresses (separated by whitespace)' => 'email addresses (separated by whitespace)',
+    'Delete associated bounce records' => 'Delete associated bounce records',
+    'Adjust campaign totals' => 'Adjust campaign totals',
+    'Requeue the campaign' => 'Requeue the campaign',
+    'Submit' => 'Submit',
+    /* campaigns.tpl.php */
+    'campaign_select_error' => 'A campaign must be selected',
 );
