@@ -1,3 +1,7 @@
+version 2015-05-30
+MarcelvC (1):
+      Made all output displayed to the user translatable; added German translation
+
 version 2015-03-23
       Change to autoload approach
 
